# CppTemplateProject

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  RELEASE.md  conanfile.py
.github/workflows/: ci.yml
Apps/: CMakeLists.txt
Apps/DemoApp/: CMakeLists.txt  MainWindow.ui  main.cpp
Apps/source/: main.cpp
CMakeModules/: doxygen.cmake
Docs/: Doxyfile.in
Modules/: CMakelists.txt
Modules/Common/: CMakeLists.txt  README.md
Modules/Common/PrecompiledHeaders/: CMakeLists.txt
Modules/Common/PrecompiledHeaders/Include/LibName/: pch.h
Modules/Common/PrecompiledHeaders/Sources/LibName/: PrecompiledHeaders.cpp
Modules/Common/Primitives/: CMakeLists.txt
Modules/Common/Primitives/Include/LibName/: Timer.hpp
Modules/Common/Primitives/Sources/LibName/: Primitives.cpp
Modules/Core/: CMakelists.txt
Modules/Core/Include/LibName/Core/: test.h
Modules/Core/Sources/LibName/Core/: test.cpp
Tests/: CMakeLists.txt  TEST.cpp  test0.cpp  test1.cpp
cmake/: tools.cmake
doc/: Doxyfile.in
myproject/: CMakeLists.txt  README.md  main.cpp
src/App/: CMakeLists.txt  CMakelists.txt
src/App/source/: main.cpp
src/Runtime/: CMakeLists.txt  CMakelists.txt
src/Runtime/Core/: test.cpp  test.h
src/Vendors/: CMakeLists.txt  CMakelists.txt
test/: CMakeLists.txt  ExampleTest.cpp  index.h  main.cpp
test/Modules/: Function.cpp
